--- a/stellar/marks/index.html
+++ b/stellar/marks/index.html
@@ -445,7 +445,7 @@
     <ul class="nav-links" id="nav-links">
       <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
       <li><a href="/attendence/index.html"><i class="fas fa-user-check"></i> Attendance</a></li>
-      <li><a href="/terms/index.html"><i class="fas fa-file-contract"></i> Terms</a></li>
+      <!-- <li><a href="/terms/index.html"><i class="fas fa-file-contract"></i> Terms</a></li> -->
       <!-- <li class="active"><a href="#"><i class="fas fa-graduation-cap"></i> Marks</a></li> -->
       <li id="auth-btn"><a href="../login/index.html"><i class="fas fa-user"></i> Login</a></li>
     </ul>
