--- a/stellar/teachermarks/index.html
+++ b/stellar/teachermarks/index.html
@@ -106,7 +106,7 @@
             list-style: none;
             display: flex;
             gap: 1.5rem;
-            align-items: center;
+            align-items: right;
         }
 
         .nav-links li {
@@ -116,21 +116,6 @@
             animation: fadeInUp 0.8s forwards;
         }
 
-        .nav-links li:nth-child(1) {
-            animation-delay: 0.2s;
-        }
-
-        .nav-links li:nth-child(2) {
-            animation-delay: 0.4s;
-        }
-
-        .nav-links li:nth-child(3) {
-            animation-delay: 0.6s;
-        }
-
-        .nav-links li:nth-child(4) {
-            animation-delay: 0.8s;
-        }
 
         @keyframes fadeInUp {
             to {
@@ -516,6 +501,14 @@
 
             mobileMenu.addEventListener('click', () => {
                 navLinks.classList.toggle('active');
+            });
+
+            // Added new event listener to close the mobile menu when clicking outside
+            document.addEventListener('click', (event) => {
+                const isClickInsideMenu = navLinks.contains(event.target) || mobileMenu.contains(event.target);
+                if (!isClickInsideMenu && navLinks.classList.contains('active')) {
+                    navLinks.classList.remove('active');
+                }
             });
         });
 
