--- a/stellar/attendence/index.html
+++ b/stellar/attendence/index.html
@@ -52,6 +52,7 @@
         .navbar {
             display: flex;
             justify-content: space-between;
+            width: 103%;
             align-items: center;
             background: var(--secondary-bg);
             padding: 1rem 2rem;
@@ -127,21 +128,7 @@
             animation: fadeInUp 0.8s forwards;
         }
 
-        .nav-links li:nth-child(1) {
-            animation-delay: 0.2s;
-        }
-
-        .nav-links li:nth-child(2) {
-            animation-delay: 0.4s;
-        }
-
-        .nav-links li:nth-child(3) {
-            animation-delay: 0.6s;
-        }
-
-        .nav-links li:nth-child(4) {
-            animation-delay: 0.8s;
-        }
+        
 
         @keyframes fadeInUp {
             to {
@@ -168,12 +155,16 @@
 
 
         @media (max-width: 768px) {
+            .navbar {
+                padding: 0.75rem 1rem; /* Reduced padding for smaller height */
+            }
+
             .nav-links {
                 display: none;
                 flex-direction: column;
                 background: var(--secondary-bg);
                 position: absolute;
-                top: 4.5rem;
+                top: 3rem; /* Adjusted to match new navbar height */
                 right: 1rem;
                 width: 14rem;
                 padding: 1.5rem;
