--- a/stellar/index.html
+++ b/stellar/index.html
@@ -7,6 +7,8 @@
     <title>Stellar Mind</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+
         :root {
             --primary-bg: #f0f4f8;
             --secondary-bg: #ffffff;
@@ -62,6 +64,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            width: 103%;
             background: var(--secondary-bg);
             padding: 1rem 1.5rem;
             box-shadow: 0 4px 20px var(--shadow-light);
@@ -155,6 +158,7 @@
         }
 
         @keyframes blink-caret {
+
             from,
             to {
                 border-color: transparent;
@@ -282,7 +286,7 @@
                 position: absolute;
                 top: 4.5rem;
                 right: 1rem;
-                width: 14rem;
+                width: 18rem;
                 padding: 1.5rem;
                 border-radius: 1rem;
                 box-shadow: 0 4px 20px var(--shadow-light);
@@ -610,6 +614,7 @@
             }
         }
 
+        /* --- Updated "Today's Classes" Section Styles --- */
         .todays-classes {
             padding: 4rem 1rem;
             background: var(--primary-bg);
@@ -620,47 +625,109 @@
 
         .todays-classes h2 {
             font-size: 2rem;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
             text-shadow: 0 0 0.75rem rgba(0, 135, 197, 0.6);
+            color: var(--text-color);
         }
 
         .classes-list {
             display: flex;
             flex-wrap: nowrap;
             overflow-x: auto;
-            gap: 1.25rem;
-            padding: 0.6rem;
-            scrollbar-width: thin;
-            scrollbar-color: var(--accent-end) var(--secondary-bg);
+            gap: 1.5rem;
+            padding: 1rem;
+            background: rgba(255, 255, 255, 0.6);
+            backdrop-filter: blur(10px);
+            border-radius: 1.5rem;
+            box-shadow: inset 0 0 1.5rem rgba(0, 0, 0, 0.05), 0 0.5rem 2rem var(--shadow-light);
+            transition: all var(--transition-speed);
+        }
+
+        .classes-list::-webkit-scrollbar {
+            height: 8px;
+        }
+
+        .classes-list::-webkit-scrollbar-track {
+            background: rgba(0, 0, 0, 0.05);
+            border-radius: 10px;
+        }
+
+        .classes-list::-webkit-scrollbar-thumb {
+            background: linear-gradient(45deg, var(--accent-start), var(--accent-end));
+            border-radius: 10px;
         }
 
         .class-card {
-            background: var(--secondary-bg);
-            padding: 1rem 1.25rem;
-            border-radius: 1rem;
-            box-shadow: 0 0 1.25rem var(--shadow-light);
-            min-width: 15rem;
+            background: var(--card-bg);
+            padding: 1.5rem;
+            border-radius: 1.25rem;
+            box-shadow: 0 0 1.5rem var(--shadow-light);
+            min-width: 17rem;
             transition: all var(--transition-speed) ease;
+            position: relative;
+            overflow: hidden;
             border: 1px solid rgba(0, 135, 197, 0.1);
+            animation: cardFadeIn 0.8s ease forwards;
+            opacity: 0;
+            transform: translateY(1rem);
         }
 
         .class-card:hover {
-            transform: translateY(-0.5rem);
-            box-shadow: 0 0 1.5rem rgba(0, 135, 197, 0.2);
+            transform: translateY(-0.5rem) scale(1.02);
+            box-shadow: 0 0 2rem rgba(0, 135, 197, 0.2);
+            border-color: var(--accent-end);
+        }
+
+        .class-card::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(66, 153, 225, 0.1) 0%, transparent 70%);
+            animation: cardGlow 3s infinite linear;
+            z-index: 0;
+        }
+
+        @keyframes cardGlow {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
         }
 
         .class-card h3 {
-            font-size: 1rem;
-            margin-bottom: 0.3rem;
-            color: var(--accent-start);
+            font-size: 1.1rem;
+            margin-bottom: 0.5rem;
+            color: var(--accent-end);
+            position: relative;
+            z-index: 1;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
         }
 
         .class-card p {
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: var(--subtle-text);
+            position: relative;
+            z-index: 1;
         }
 
-        .holiday {
+        .class-card p:first-of-type {
+            font-weight: 600;
+            color: var(--text-color);
+        }
+
+        .class-card i {
+            color: var(--accent-start);
+        }
+
+        .holiday-message {
             font-size: 2.5rem;
             font-weight: 800;
             text-align: center;
@@ -690,6 +757,7 @@
         }
 
         @keyframes bounceWave {
+
             0%,
             100% {
                 transform: translateY(0) scale(1);
@@ -708,18 +776,21 @@
             }
         }
 
-        .gradient-username {
-            display: inline-block;
-            font-size: 2rem;
-            font-weight: 700;
-            background: linear-gradient(90deg, var(--accent-start), var(--accent-end), var(--accent-start));
+        .loading-message {
+            font-size: 1.2rem;
+            font-weight: bold;
+            padding: 1.25rem;
+            border-radius: 1rem;
+            background: linear-gradient(90deg, #6a82fb, #d3d9ff, #ff6b6b, #feca57);
             background-size: 300% 300%;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            animation: gradientFlow 5s infinite linear;
-            margin-top: 0.5rem;
+            color: #fff;
+            animation: gradientFlow 5s infinite linear, pulse 2s infinite ease-in-out;
+            box-shadow: 0 0.35rem 1.25rem var(--shadow-heavy);
+            display: inline-block;
+            text-align: center;
+            margin: 2rem auto;
         }
-
+        
         @keyframes gradientFlow {
             0% {
                 background-position: 0% 50%;
@@ -734,32 +805,8 @@
             }
         }
 
-        .fade-in {
-            opacity: 0;
-            transform: translateY(1rem);
-            animation: fadeInUp 0.6s forwards;
-        }
-
-        @keyframes fadeInUp {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .uploading-soon {
-            font-size: 1.2rem;
-            font-weight: bold;
-            padding: 1.25rem;
-            border-radius: 1rem;
-            background: linear-gradient(90deg, #6a82fb, #d3d9ff, #ff6b6b, #feca57);
-            background-size: 300% 300%;
-            color: #fff;
-            animation: gradientFlow 5s infinite linear, pulse 2s infinite ease-in-out;
-            box-shadow: 0 0.35rem 1.25rem var(--shadow-heavy);
-        }
-
         @keyframes pulse {
+
             0%,
             100% {
                 transform: scale(1);
@@ -767,6 +814,39 @@
 
             50% {
                 transform: scale(1.05);
+            }
+        }
+
+        .gradient-username {
+            display: inline-block;
+            font-size: 2rem;
+            font-weight: 700;
+            background: linear-gradient(90deg, var(--accent-start), var(--accent-end), var(--accent-start));
+            background-size: 300% 300%;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: gradientFlow 5s infinite linear;
+            margin-top: 0.5rem;
+        }
+
+        @keyframes fade-in {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        .fade-in {
+            animation: fade-in 1s ease-in-out;
+        }
+
+        @keyframes cardFadeIn {
+            to {
+                opacity: 1;
+                transform: translateY(0);
             }
         }
 
@@ -896,7 +976,9 @@
     <section class="todays-classes" id="todays-classes-section">
         <h2>Today's Classes</h2>
         <div id="classes-list" class="classes-list">
-            <p>Loading today's schedule...</p>
+            <div class="loading-message">
+                <span>📡 Loading today's schedule...</span>
+            </div>
         </div>
     </section>
 
@@ -1207,7 +1289,7 @@
             }).toUpperCase();
 
             if (today === "SAT" || today === "SUN") {
-                classList.innerHTML = `<div class="holiday">🎉 Today is a Holiday 🎉</div>`;
+                classList.innerHTML = `<div class="holiday-message">🎉 Today is a Holiday 🎉</div>`;
                 return;
             }
 
@@ -1217,13 +1299,19 @@
 
                 todaySchedule.forEach((item) => {
                     const card = document.createElement("div");
-                    card.className = "class-card fade-in";
-                    card.innerHTML = `<p>${item}</p>`;
+                    card.className = "class-card";
+                    const parts = item.split('→');
+                    const time = parts[0].trim();
+                    const details = parts[1].trim();
+                    card.innerHTML = `
+                        <p><i class="fas fa-clock"></i> ${time}</p>
+                        <p>${details}</p>
+                    `;
                     classList.appendChild(card);
                 });
             } else {
                 classList.innerHTML = `
-                <div class="uploading-soon">
+                <div class="loading-message">
                     <span>📡 Your schedule is uploading soon...</span>
                 </div>
                 `;
