--- a/stellar/attendence/index.html
+++ b/stellar/attendence/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0" />
     <title>Attendance Dashboard</title>
 
     <!-- Font Awesome -->
@@ -52,7 +52,7 @@
         .navbar {
             display: flex;
             justify-content: space-between;
-            width: 103%;
+            width: 100%;
             align-items: center;
             background: var(--secondary-bg);
             padding: 1rem 2rem;
