--- a/stellar/login/verify.html
+++ b/stellar/login/verify.html
@@ -180,7 +180,7 @@
 <body>
   <div class="verify-container">
     <div class="logo">
-      <img src="/assets/tlogo.png" alt="Stellar Mind Logo" onerror="this.style.display='none'">
+      <img src="/assets/ttlogo.jpg" alt="Stellar Mind Logo" onerror="this.style.display='none'">
     </div>
     
     <h1><i class="fas fa-user-shield"></i> Verify & Set Password</h1>
