--- a/stellar/tsprofile/index.html
+++ b/stellar/tsprofile/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0" />
     <title>Stellar Mind | Student Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -369,7 +369,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">
-            <img src="/assets/tlogo.png" alt="Stellar Mind Logo" class="animated-logo">
+            <img src="/assets/ttlogo.jpg" alt="Stellar Mind Logo" class="animated-logo">
             <span>Stellar Mind</span>
         </div>
         <div class="menu-toggle" id="mobile-menu">
