--- a/stellar/login/index.html
+++ b/stellar/login/index.html
@@ -191,7 +191,7 @@
 
     <div class="login-container">
         <div class="logo">
-            <img src="/assets/tlogo.png" alt="Stellar Mind Logo">
+            <img src="/assets/ttlogo.jpg" alt="Stellar Mind Logo">
         </div>
         
         <h1><i class="fa-solid fa-user-secret"></i> Welcome Back</h1>
