--- a/stellar/login/signup.html
+++ b/stellar/login/signup.html
@@ -215,7 +215,7 @@
 
   <div class="signup-container">
     <div class="logo">
-      <img src="/assets/tlogo.png" alt="Stellar Mind Logo" onerror="this.style.display='none'">
+      <img src="/assets/ttlogo.jpg" alt="Stellar Mind Logo" onerror="this.style.display='none'">
     </div>
     
     <h1>Create Your Account</h1>
