--- a/stellar/terms/index.html
+++ b/stellar/terms/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0" />
     <title>Terms & Conditions | Stellar Mind</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
@@ -335,7 +335,7 @@
             <li><a href="/attendence/index.html"><i class="fas fa-user-check"></i> Attendance</a></li>
             <li><a href="/ai/index.html"><i class="fas fa-robot"></i> AI HELPER</a></li>
             <li><a href="#" class="active"><i class="fas fa-file-contract"></i> Terms</a></li>
-            <li><a href="/marks/index.html"><i class="fas fa-clipboard"></i> Marks</a></li>
+            <!-- <li><a href="/marks/index.html"><i class="fas fa-clipboard"></i> Marks</a></li> -->
             <li id="auth-btn"><a href="/login/index.html"><i class="fas fa-user"></i> Login</a></li>
         </ul>
     </nav>
